unpackaged/main/default/objects/CampaignMember/fields/Lead_Call_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Lead_Call_Attempts__c</fullName>
    <formula>Lead.Call_attempts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Call Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>