unpackaged/main/default/objects/CampaignMember/fields/LeadOrContactLastAQLDate__c.field-meta.xml
<CustomField>
    <fullName>LeadOrContactLastAQLDate__c</fullName>
    <formula>IF(Contact.Id ='', Lead.Last_AQL_Date__c ,Contact.Last_AQL_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last AQL Date</label>
    <type>DateTime</type>
</CustomField>