unpackaged/main/default/objects/CampaignMember/fields/LeadOrContactMarketingCampaign__c.field-meta.xml
<CustomField>
    <fullName>LeadOrContactMarketingCampaign__c</fullName>
    <formula>IF(Contact.Id='', Lead.Marketing_Campaign__c ,Contact.Marketing_Campaign__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Campaign</label>
    <type>Text</type>
</CustomField>