unpackaged/main/default/objects/CampaignMember/fields/LeadOrContactMarketingStatus__c.field-meta.xml
<CustomField>
    <fullName>LeadOrContactMarketingStatus__c</fullName>
    <formula>IF(TEXT(Contact.Marketing_Status__c )='', TEXT(Lead.Marketing_Status__c) ,TEXT(Contact.Marketing_Status__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Status</label>
    <type>Text</type>
</CustomField>