unpackaged/main/default/objects/CampaignMember/fields/LeadOrContactNature__c.field-meta.xml
<CustomField>
    <fullName>LeadOrContactNature__c</fullName>
    <formula>IF(TEXT(Lead.Nature__c )='',TEXT(Contact.Account.Nature__c ), TEXT(Lead.Nature__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nature</label>
    <type>Text</type>
</CustomField>