unpackaged/main/default/objects/CampaignMember/validationRules/VR_CaMember001_BlockEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CaMember001_BlockEdit</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
NOT($User.BypassVR__c),
NOT($Profile.Name = 'System Administrator'),
NOT($Profile.Name = 'Administrateur Système'),
NOT($Profile.Name = 'Cegid Telemarketing'),
NOT($Profile.Name = 'Cegid Marketing'),
NOT($Profile.Name = 'Marketo')		
)</errorConditionFormula>
    <errorMessage>You can't edit campaign members</errorMessage>
</ValidationRule>